--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-# /dist
+/dist
 /tmp
 /out-tsc
 # Only exists if Bazel was run
@@ -10,8 +10,8 @@
 # dependencies
 /node_modules
  
-/src
-/e2e
+src
+e2e
  
 # profiling files
 chrome-profiler-events*.json
