--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/pwa": "^0.803.19",
     "@angular/router": "~8.2.14",
     "@angular/service-worker": "~8.2.14",
+    "classlist.js": "^1.1.20150312",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
