--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "knex": "^0.16.3",
     "lodash": "^4.17.15",
     "log4js": "^4.0.2",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "eslint": "^6.2.2",
