--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 192.168.1.7 --port 80 ",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,7 +24,9 @@
     "@angular/service-worker": "~8.2.14",
     "classlist.js": "^1.1.20150312",
     "jquery": "^3.4.1",
-    "rxjs": "^6.4.0",
+    "ngx-infinite-scroll": "^8.0.1",
+    "ngx-infinite-scroller": "^0.5.0",
+    "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
