--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.1",
     "ngx-infinite-scroll": "^8.0.1",
     "ngx-infinite-scroller": "^0.5.0",
+    "ngx-mask": "^8.1.7",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
