--- a/angular.json
+++ b/angular.json
@@ -128,6 +128,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "money-transfer-app"
+    }
+  },
+  "defaultProject": "money-transfer-app",
+  "cli": {
+    "analytics": false
+  }
 }
